Third commit of index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>Welcome to Git's Online Training,checking with difference</h1>
+<h1>Welcome to Git's Online Training,checking with difference it works only b4 commit</h1>
