--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>Welcome to Git's Online Training,checking with difference it works only b4 commit</h1>
 <h2> change in git hub <h2>
-<h3> check for diff command <h3>
+<h3> check for diff commands <h3>
 
